--- a/WebContent/Index.html
+++ b/WebContent/Index.html
@@ -5,7 +5,7 @@
 <title>Nieuwe Pagina</title>
 </head> 
 <body>
-<h1>Dit is de head h1!</h1>
+<h1>Dit is de head h1kklfklsdjf!</h1>
 Dit is de body
 <img src="Koala.jpg" height=225>
 </body>
