--- a/WebContent/Index.html
+++ b/WebContent/Index.html
@@ -3,10 +3,11 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Nieuwe Pagina</title>
+<link rel="stylesheet" type="text/css" href="mystyle.css">
 </head> 
 <body>
-<h1>Dit is de head h1kklfklsdjf!</h1>
-Dit is de body
-<img src="Koala.jpg" height=225>
+<h1>Dit is de head!</h1>
+<p>Dit is de body</p>
+<div><img class="plaatje" src="Koala.jpg" height=225 alt="Koala"></div>
 </body>
 </html>
