--- a/WebContent/Index.html
+++ b/WebContent/Index.html
@@ -2,27 +2,27 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Design by YOURSITENAMEm</title>
+<title>Design by Kees en Ronald</title>
 
 <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-<div class="style3"></div><div class="style_2"><span class="style3"><a href="http://www.zonnebank-studio-vergelijk.nl" title="Zonnebank Zonnestudio"><strong>Zonnebank zonnestudio</strong></a></span></div>
+<div class="style3"></div><div class="style_2"><span class="style3"><a href="http://localhost:8080/Familie" title="Familie"><strong>Familie</strong></a></span></div>
 <div id="wrap">
 <div id="topbar">
-  <h1 id="sitename"><a href="http://www.zonnebank-studio-vergelijk.nl" target="_blank">  Zonnebank en zonnestudio</a></h1>
+  <h1 id="sitename"><a href="http://localhost:8080/Familie">Familie</a></h1>
   <div id="menus">
   <ul id="topmenu">
 <li  class="active"><a href="#">Home</a>
 </li>
-<li><a href="#">About Us</a>
+<li><a href="#">Over ons</a>
 </li>
-<li><a href="#">Services</a>
+<li><a href="#">Menu 1</a>
 </li>
-<li><a href="#">products</a>
+<li><a href="#">Menu 2</a>
 </li>
-<li><a href="#">Services</a>
+<li><a href="#">Menu 3</a>
 </li>
 </ul>
 </div>
@@ -32,9 +32,8 @@
 </div>
 <div id="content">
 <div id="mainpage">
-<h2>Welcome to Our Website!</h2>
-<p>Zonnebank en zonnestudios is a  "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum, Small   Businesses Website</a>. After designing your site, we also submit  it major search engines and take due care to list them in relevant directories  and press releases. <br />
-			  <br />
+<h2>Welkom bij deze familiewebsite!</h2>
+<p>Zonnebank en zonnestudios is a Small   Businesses Website. After designing your site, we also submit  it major search engines and take due care to list them in relevant directories  and press releases. <br /><br />
 "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum,Domain name registration, Flash Animation,  Contact page with web form, Logo design, Web hosting services, Zonnebank en zonnestudios,  Traffic analysis and reporting, Navigation system creation etc. All these  services are available to you through , just login and  find out the miracles we have for you.</p>
 </div>
 <div id="sidebar">
@@ -48,7 +47,6 @@
 <li>
 	<ul><li><a href="#">Link a   Website</a></li>
 				  			<li><a href="#">Website Link B</a></li>
-				 
 							<li><a href="#">Website Link C</a></li>
 							<li> <a href="#">Small Businesses Website</a></li>
 							<li><a href="#">Flyer Website</a></li>
@@ -60,11 +58,12 @@
   <div id="sidebarbottom"></div>
 </div>
 <div class="clear"></div>
-</div>
+<div>
 
 </div>
 <div id="footer">
-<p>Copyright &copy; 2013 your sitename| <a href="#">Sitemap</a></p>
+<p>Copyright &copy; 2016 Familie| <a href="#">Sitemap</a></p>
+</div>
 </div>
 </body>
 </html>
