--- a/WebContent/Index.html
+++ b/WebContent/Index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Design by Kees en Ronald</title>
-
+<script src="overOns.js" type="text/javascript"></script>
 <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -14,9 +14,9 @@
   <h1 id="sitename"><a href="http://localhost:8080/Familie">Familie</a></h1>
   <div id="menus">
   <ul id="topmenu">
-<li  class="active"><a href="#">Home</a>
+<li  class="active"><a href="Index.html">Home</a>
 </li>
-<li><a href="#">Over ons</a>
+<li><a href="#" onclick="overOns()">Over ons</a>
 </li>
 <li><a href="#">Menu 1</a>
 </li>
@@ -33,8 +33,7 @@
 <div id="content">
 <div id="mainpage">
 <h2>Welkom bij deze familiewebsite!</h2>
-<p>Zonnebank en zonnestudios is a Small   Businesses Website. After designing your site, we also submit  it major search engines and take due care to list them in relevant directories  and press releases. <br /><br />
-"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum,Domain name registration, Flash Animation,  Contact page with web form, Logo design, Web hosting services, Zonnebank en zonnestudios,  Traffic analysis and reporting, Navigation system creation etc. All these  services are available to you through , just login and  find out the miracles we have for you.</p>
+<p>Zonnebank en zonnestudios is a Small Businesses Website. After designing your site, we also submit  it major search engines and take due care to list them in relevant directories  and press releases.</p>
 </div>
 <div id="sidebar">
 <div id="sidebarcontents"> 
@@ -52,9 +51,9 @@
 		</li>
 	</ul>
 </div>
+</div>
 
   <div id="sidebarbottom"></div>
-</div>
 </div>
 <div class="clear"></div>
 <div>
