--- a/WebContent/Index.html
+++ b/WebContent/Index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Design by Kees en Ronald</title>
-<script src="overOns.js" type="text/javascript"></script>
+<script src="JSFuncties.js" type="text/javascript"></script>
 <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
