--- a/WebContent/Index.html
+++ b/WebContent/Index.html
@@ -18,7 +18,7 @@
 </li>
 <li><a href="#" onclick="overOns()">Over ons</a>
 </li>
-<li><a href="#">Menu 1</a>
+<li><a href="#" onclick="namenLijst()">Lijst met namen</a>
 </li>
 <li><a href="#">Menu 2</a>
 </li>
