--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -14,7 +14,7 @@
   <h1 id="sitename"><a href="http://localhost:8080/Familie">Familie</a></h1>
   <div id="menus">
   <ul id="topmenu">
-<li  class="active"><a href="Index.html">Home</a>
+<li  class="active"><a href="index.html">Home</a>
 </li>
 <li><a href="#" onclick="overOns()">Over ons</a>
 </li>
