--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -20,7 +20,7 @@
 </li>
 <li><a href="#" onclick="namenLijst()">Lijst met namen</a>
 </li>
-<li><a href="#">Menu 2</a>
+<li><a href="#" onclick="persGeg()">Persoonsgegevens</a>
 </li>
 <li><a href="#">Menu 3</a>
 </li>
@@ -42,7 +42,7 @@
  		<h2>Our Services</h2>
 	</li>
 		<li>
-			<ul><li><a href="#">Link a   Website</a></li>
+			<ul><li><a href="#">Link a Website</a></li>
 				<li><a href="#">Website Link B</a></li>
 				<li><a href="#">Website Link C</a></li>
 				<li><a href="#">Small Businesses Website</a></li>
