--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -20,7 +20,7 @@
 </li>
 <li  id="namenlijst" class="inactive" ><a href="#" onclick="namenLijst()">Lijst met namen</a>
 </li>
-<li class="inactive" ><a href="#" onclick="persGeg()">Persoonsgegevens</a>
+<li id="persoonsgegevens" class="inactive" ><a href="#" onclick="persGeg()">Persoonsgegevens</a>
 </li>
 <li  class="inactive"><a href="#">Menu 3</a>
 </li>
