--- a/WebContent/persGeg.html
+++ b/WebContent/persGeg.html
@@ -4,9 +4,9 @@
 	<table style="width:100%">
 		<tr><td>Geslacht</td><td><select autofocus><option value="man">Man</option><option value="vrouw">Vrouw</option></select></td></tr>
 		<tr><td>Doopnaam</td><td><input 		type="text"		name="doopnaam"			maxlength="50"	size="50" id="doopnaam" onchange=checkPersGeg("doopnaam")></td></tr>
-		<tr><td>Roepnaam</td><td><input 		type="text"		name="roepnaam" 		maxlength="15"	size="15"></td></tr>
+		<tr><td>Roepnaam</td><td><input 		type="text"		name="roepnaam" 		maxlength="15"	size="15" id="roepnaam"></td></tr>
 		<tr><td>Tussenvoegsel</td><td><input 	type="text" 	name="tussenvoegsel"	maxlength="15" 	size="15"></td></tr>
-		<tr><td>Achternaam</td><td><input 		type="text"		name="achternaam" 		maxlength="50"	size="50"></td></tr>
+		<tr><td>Achternaam</td><td><input 		type="text"		name="achternaam" 		maxlength="50"	size="50" id="achternaam"></td></tr>
 		<tr><td>Straatnaam</td><td><input 		type="text"		name="straatnaam" 		maxlength="50"	size="50"></td></tr>
 		<tr><td>Huisnr</td><td><input 			type="text"		name="huisnummer" 		maxlength="5" 	size="15"></td></tr>
 		<tr><td>Huisnr toev.<td><input 			type="text"		name="huisnrtoev"		maxlength="5" 	size="15"></td></tr>
@@ -21,7 +21,7 @@
 		<tr><td>E-mail adres</td><td><input 	type="email"	name="email" 			maxlength="50"	size="50"></td></tr>
 		<tr><td>Wachtwoord</td><td><input 		type="password"	name="password" 		maxlength="20"	size="15"></td></tr>
 		<tr><td>Herhaal wachtwoord</td><td><input type="password" name="password2" 		maxlength="20"	size="15"></td></tr>
-		<tr><td></td><td><input 				type="button" 	value="Opslaan" 		onClick="test()">
+		<tr><td></td><td><input 				type="button" 	value="Opslaan" 		onClick="setPersgeg()">
 	</table>
 	<br>
 </form> 
