--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -30,7 +30,7 @@
 
 <div id="header">
 </div>
-<div id="content">
+<!-- <div id="content"> -->
 <div id="mainpage">
 </div>
 <div id="sidebar">
@@ -49,7 +49,7 @@
 		</li>
 	</ul>
 </div>
-</div>
+<!-- </div> -->
 
   <div id="sidebarbottom"></div>
 </div>
