--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -18,7 +18,7 @@
 </li>
 <li  id="overons"    class="inactive" ><a href="#" onclick="overOns()">Over ons</a>
 </li>
-<li  id="namenlijst" class="inactive" ><a href="#" onclick="namenLijst()">Lijst met namen</a>
+<li  id="namenlijst" class="inactive" ><a href="#" onclick="namenLijst()">Alle familieleden</a>
 </li>
 <li id="persoonsgegevens" class="inactive" ><a href="#" onclick="persGeg()">Persoonsgegevens</a>
 </li>
