--- a/WebContent/persGeg.html
+++ b/WebContent/persGeg.html
@@ -1,27 +1,66 @@
 <div id="persoonsGegevens">
-<form name="naam">
+<form name="persgeg">
 	<br>
 	<table style="width:100%">
-		<tr><td style="width:25%">Geslacht</td><td style="width:50%"><select autofocus><option value="man">Man</option><option value="vrouw">Vrouw</option></select></td></tr>
-		<tr><td style="width:25%">Doopnaam</td><td style="width:50%"><input 		type="text"		name="doopnaam"			maxlength="50"	size="50" id="doopnaam" onblur="checkPersGeg(id)"></td><td style="width:25% color:red" id="foutDoopnaam"></td></tr>
-		<tr><td>Roepnaam</td><td><input 		type="text"		name="roepnaam" 		maxlength="15"	size="15" id="roepnaam"></td></tr>
-		<tr><td>Tussenvoegsel</td><td><input 	type="text" 	name="tussenvoegsel"	maxlength="15" 	size="15"></td></tr>
-		<tr><td>Achternaam</td><td><input 		type="text"		name="achternaam" 		maxlength="50"	size="50" id="achternaam"></td></tr>
-		<tr><td>Straatnaam</td><td><input 		type="text"		name="straatnaam" 		maxlength="50"	size="50"></td></tr>
-		<tr><td>Huisnr</td><td><input 			type="text"		name="huisnummer" 		maxlength="5" 	size="15"></td></tr>
-		<tr><td>Huisnr toev.<td><input 			type="text"		name="huisnrtoev"		maxlength="5" 	size="15"></td></tr>
-		<tr><td>Postcode</td><td><input 		type="text"		name="postcode" 		maxlength="6" 	size="15"></td></tr>
-		<tr><td>Plaatsnaam</td><td><input 		type="text"		name="plaats" 			maxlength="50"	size="50"></td></tr>
-		<tr><td>Staat</td><td><input 			type="text"		name="staat" 			maxlength="50"	size="50"></td></tr>
-		<tr><td>Land</td><td><input 			type="text"		name="Land" 			maxlength="50"	size="50"></td></tr>
-		<tr><td>Telefoon</td><td><input 		type="text"		name="telefoon" 		maxlength="10" 	size="15"></td></tr>
-		<tr><td>Geboortedatum</td><td><input 	type="date"		name="geboortedatum" 	maxlength="10" 	size="15"></td></tr>
-		<tr><td>Geboortplaats</td><td><input 	type="text"		name="geboortplaats" 	maxlength="50"	size="50"></td></tr>
-		<tr><td>Datum overlijden</td><td><input type="date"		name="overlijdensdatum" maxlength="10" 	size="15"></td></tr>
-		<tr><td>E-mail adres</td><td><input 	type="email"	name="email" 			maxlength="50"	size="50"></td></tr>
-		<tr><td>Wachtwoord</td><td><input 		type="password"	name="password" 		maxlength="20"	size="15"></td></tr>
-		<tr><td>Herhaal wachtwoord</td><td><input type="password" name="password2" 		maxlength="20"	size="15"></td></tr>
-		<tr><td></td><td><input 				type="button" 	value="Opslaan" 		onClick="setPersgeg()">
+		<tr><td style="width:20%">Geslacht</td>
+			<td style="width:50%"><select autofocus><option 	id="geslacht"			value="man">Man</option><option value="vrouw">Vrouw</option></select></td>
+		</tr>
+		<tr><td style="width:20%">Doopnaam</td>
+			<td style="width:50%"><input		type="text"		id="doopnaam"			maxlength="50"	size="50" onblur="checkPersGeg(id)"></td>
+			<td style="width:30%"								id="foutDoopnaam"></td>
+		</tr>
+		<tr><td>Roepnaam</td><td><input			type="text"		id="roepnaam"			maxlength="15"	size="15" onblur="checkPersGeg(id)"></td>
+			<td 												id="foutRoepnaam"></td>
+		</tr>
+		<tr><td>Tussenvoegsel</td><td><input 	type="text" 	id="tussenvoegsel"		maxlength="15" 	size="15" onblur="checkPersGeg(id)"></td>
+			<td 												id="foutTussenvoegsel"></td>
+		</tr>
+		<tr><td>Achternaam</td><td><input 		type="text"		id="achternaam" 		maxlength="50"	size="50" onblur="checkPersGeg(id)"></td>
+			<td 												id="foutAchternaam"></td>
+		</tr>
+		<tr><td>Straatnaam</td><td><input 		type="text"		id="straatnaam" 		maxlength="50"	size="50" onblur="checkPersGeg(id)"></td>
+			<td 												id="foutStraatnaam"></td>
+		</tr>
+		<tr><td>Huisnummer</td><td><input 		type="text"		id="huisnr" 			maxlength="5" 	size="15" onblur="checkPersGeg(id)"></td>
+			<td 												id="foutHuisnr"></td>
+		</tr>
+		<tr><td>Huisnr toev.<td><input 			type="text"		id="huisnrtoev"			maxlength="5" 	size="15" onblur="checkPersGeg(id)"></td>
+			<td 												id="foutHuisnrtoev"></td>
+		</tr>
+		<tr><td>Postcode</td><td><input 		type="text"		id="postcode" 			maxlength="6" 	size="15" onblur="checkPersGeg(id)"></td>
+			<td													id="foutPostcode"></td>
+		</tr>
+		<tr><td>Plaatsnaam</td><td><input 		type="text"		id="plaatsnaam" 		maxlength="50"	size="50" onblur="checkPersGeg(id)"></td>
+			<td 												id="foutPlaatsnaam"></td>
+		</tr>
+		<tr><td>Staat</td><td><input 			type="text"		id="staat" 				maxlength="50"	size="50" onblur="checkPersGeg(id)"></td>
+			<td 												id="foutStaat"></td>
+		</tr>
+		<tr><td>Land</td><td><input value="Nederland" type="text" id="land" 			maxlength="50"	size="50" onblur="checkPersGeg(id)"></td>
+			<td 												id="foutLand"></td>
+		</tr>
+		<tr><td>Telefoon</td><td><input 		type="text"		id="telefoon" 			maxlength="10" 	size="15" onblur="checkPersGeg(id)"></td>
+			<td 												id="foutTelefoon"></td>
+		</tr>
+		<tr><td>Geboortedatum</td><td><input 	type="date"		id="geboortedatum" 		maxlength="10" 	size="15" onblur="checkPersGeg(id)"></td>
+			<td 												id="foutGeboortedatum"></td>
+		</tr>
+		<tr><td>Geboortplaats</td><td><input 	type="text"		id="geboortplaats" 		maxlength="50"	size="50" onblur="checkPersGeg(id)"></td>
+			<td 												id="foutGeboortplaats"></td>
+		</tr>
+		<tr><td>Datum overlijden</td><td><input type="date"		id="overlijdensdatum" 	maxlength="10" 	size="15" onblur="checkPersGeg(id)"></td>
+			<td 												id="foutOverlijdensdatum"></td>
+		</tr>
+		<tr><td>E-mail adres</td><td><input 	type="email"	id="email" 				maxlength="50"	size="50" onblur="checkPersGeg(id)"></td>
+			<td 												id="foutEmail"></td>
+		</tr>
+		<tr><td>Wachtwoord</td><td><input 		type="password"	id="password" 			maxlength="20"	size="15" onblur="checkPersGeg(id)"></td>
+			<td 												id="foutPassword"></td>
+		</tr>
+		<tr><td>Herhaal wachtwoord</td><td><input type="password" id="password2" 		maxlength="20"	size="15" onblur="checkPersGeg(id)"></td>
+			<td 												id="foutPassword2"></td>
+		</tr>
+		<tr><td></td><td style="width:10%"><input type="button" id="Opslaan" 			onClick="setPersgeg()"></td></tr>
 	</table>
 	<br>
 </form> 
