--- a/WebContent/persGeg.html
+++ b/WebContent/persGeg.html
@@ -45,8 +45,8 @@
 		<tr><td>Geboortedatum</td><td><input 	type="date"		id="geboortedatum" 		maxlength="10" 	size="15" onblur="checkPersGeg(id)"></td>
 			<td 												id="foutGeboortedatum"></td>
 		</tr>
-		<tr><td>Geboortplaats</td><td><input 	type="text"		id="geboortplaats" 		maxlength="50"	size="50" onblur="checkPersGeg(id)"></td>
-			<td 												id="foutGeboortplaats"></td>
+		<tr><td>Geboorteplaats</td><td><input 	type="text"		id="geboorteplaats" 	maxlength="50"	size="50" onblur="checkPersGeg(id)"></td>
+			<td 												id="foutGeboorteplaats"></td>
 		</tr>
 		<tr><td>Datum overlijden</td><td><input type="date"		id="overlijdensdatum" 	maxlength="10" 	size="15" onblur="checkPersGeg(id)"></td>
 			<td 												id="foutOverlijdensdatum"></td>
@@ -59,8 +59,8 @@
 		</tr>
 		<tr><td>Herhaal wachtwoord</td><td><input type="password" id="password2" 		maxlength="20"	size="15" onblur="checkPersGeg(id)"></td>
 			<td 												id="foutPassword2"></td>
-		</tr>
-		<tr><td></td><td style="width:10%"><input type="button" id="Opslaan" 			onClick="setPersgeg()"></td></tr>
+		</tr><br>
+		<tr><td></td><td> <button onClick="setPersgeg()" type="button">Opslaan</button></td></tr>
 	</table>
 	<br>
 </form> 
