--- a/WebContent/persGeg.html
+++ b/WebContent/persGeg.html
@@ -3,65 +3,65 @@
 	<br>
 	<table style="width:100%">
 		<tr><td style="width:20%">Geslacht</td>
-			<td style="width:50%"><select autofocus><option 	id="geslacht"			value="man">Man</option><option value="vrouw">Vrouw</option></select></td>
+			<td style="width:50%"><select autofocus 			id="geslacht">	<option value="man">Man</option>
+																			  	<option value="vrouw">Vrouw</option></select></td>
 		</tr>
 		<tr><td style="width:20%">Doopnaam</td>
 			<td style="width:50%"><input		type="text"		id="doopnaam"			maxlength="50"	size="50" onblur="checkPersGeg(id)"></td>
-			<td style="width:30%"								id="foutDoopnaam"></td>
+			<td style="color:red;"								id="foutDoopnaam"></td>
 		</tr>
 		<tr><td>Roepnaam</td><td><input			type="text"		id="roepnaam"			maxlength="15"	size="15" onblur="checkPersGeg(id)"></td>
-			<td 												id="foutRoepnaam"></td>
+			<td style="color:red;"								id="foutRoepnaam"></td>
 		</tr>
 		<tr><td>Tussenvoegsel</td><td><input 	type="text" 	id="tussenvoegsel"		maxlength="15" 	size="15" onblur="checkPersGeg(id)"></td>
-			<td 												id="foutTussenvoegsel"></td>
+			<td style="color:red;"								id="foutTussenvoegsel"></td>
 		</tr>
 		<tr><td>Achternaam</td><td><input 		type="text"		id="achternaam" 		maxlength="50"	size="50" onblur="checkPersGeg(id)"></td>
-			<td 												id="foutAchternaam"></td>
+			<td style="color:red;"								id="foutAchternaam"></td>
 		</tr>
 		<tr><td>Straatnaam</td><td><input 		type="text"		id="straatnaam" 		maxlength="50"	size="50" onblur="checkPersGeg(id)"></td>
-			<td 												id="foutStraatnaam"></td>
+			<td style="color:red;"								id="foutStraatnaam"></td>
 		</tr>
 		<tr><td>Huisnummer</td><td><input 		type="text"		id="huisnr" 			maxlength="5" 	size="15" onblur="checkPersGeg(id)"></td>
-			<td 												id="foutHuisnr"></td>
+			<td style="color:red;"								id="foutHuisnr"></td>
 		</tr>
 		<tr><td>Huisnr toev.<td><input 			type="text"		id="huisnrtoev"			maxlength="5" 	size="15" onblur="checkPersGeg(id)"></td>
-			<td 												id="foutHuisnrtoev"></td>
+			<td style="color:red;"								id="foutHuisnrtoev"></td>
 		</tr>
 		<tr><td>Postcode</td><td><input 		type="text"		id="postcode" 			maxlength="6" 	size="15" onblur="checkPersGeg(id)"></td>
-			<td													id="foutPostcode"></td>
+			<td	style="color:red;"								id="foutPostcode"></td>
 		</tr>
 		<tr><td>Plaatsnaam</td><td><input 		type="text"		id="plaatsnaam" 		maxlength="50"	size="50" onblur="checkPersGeg(id)"></td>
-			<td 												id="foutPlaatsnaam"></td>
+			<td style="color:red;"								id="foutPlaatsnaam"></td>
 		</tr>
 		<tr><td>Staat</td><td><input 			type="text"		id="staat" 				maxlength="50"	size="50" onblur="checkPersGeg(id)"></td>
-			<td 												id="foutStaat"></td>
+			<td style="color:red;"								id="foutStaat"></td>
 		</tr>
 		<tr><td>Land</td><td><input value="Nederland" type="text" id="land" 			maxlength="50"	size="50" onblur="checkPersGeg(id)"></td>
-			<td 												id="foutLand"></td>
+			<td style="color:red;"								id="foutLand"></td>
 		</tr>
 		<tr><td>Telefoon</td><td><input 		type="text"		id="telefoon" 			maxlength="10" 	size="15" onblur="checkPersGeg(id)"></td>
-			<td 												id="foutTelefoon"></td>
+			<td style="color:red;"								id="foutTelefoon"></td>
 		</tr>
 		<tr><td>Geboortedatum</td><td><input 	type="date"		id="geboortedatum" 		maxlength="10" 	size="15" onblur="checkPersGeg(id)"></td>
-			<td 												id="foutGeboortedatum"></td>
+			<td style="color:red;"								id="foutGeboortedatum"></td>
 		</tr>
 		<tr><td>Geboorteplaats</td><td><input 	type="text"		id="geboorteplaats" 	maxlength="50"	size="50" onblur="checkPersGeg(id)"></td>
-			<td 												id="foutGeboorteplaats"></td>
+			<td style="color:red;"								id="foutGeboorteplaats"></td>
 		</tr>
 		<tr><td>Datum overlijden</td><td><input type="date"		id="overlijdensdatum" 	maxlength="10" 	size="15" onblur="checkPersGeg(id)"></td>
-			<td 												id="foutOverlijdensdatum"></td>
+			<td style="color:red;"								id="foutOverlijdensdatum"></td>
 		</tr>
 		<tr><td>E-mail adres</td><td><input 	type="email"	id="email" 				maxlength="50"	size="50" onblur="checkPersGeg(id)"></td>
-			<td 												id="foutEmail"></td>
+			<td style="color:red;"								id="foutEmail"></td>
 		</tr>
 		<tr><td>Wachtwoord</td><td><input 		type="password"	id="password" 			maxlength="20"	size="15" onblur="checkPersGeg(id)"></td>
-			<td 												id="foutPassword"></td>
+			<td style="color:red;"								id="foutPassword"></td>
 		</tr>
 		<tr><td>Herhaal wachtwoord</td><td><input type="password" id="password2" 		maxlength="20"	size="15" onblur="checkPersGeg(id)"></td>
-			<td 												id="foutPassword2"></td>
-		</tr><br>
+			<td style="color:red;"								id="foutPassword2"></td>
+		</tr>
 		<tr><td></td><td> <button onClick="setPersgeg()" type="button">Opslaan</button></td></tr>
 	</table>
-	<br>
 </form> 
 </div>
