Validatie persoonsgegevens aangepast

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -8,58 +8,62 @@
 </head>
 
 <body onload="home()">
-<div class="style3"></div><div class="style_2"><span class="style3"><a href="http://localhost:8080/Familie" title="Familie"><strong>Familie</strong></a></span></div>
-<div id="wrap">
-<div id="topbar">
-  <h1 id="sitename"><a href="http://localhost:8080/Familie">Familie</a></h1>
-  <div id="menus">
-  <ul id="topmenu">
-<li  id="home"       class="active"   ><a href="#" onclick="home()">Home</a>
-</li>
-<li  id="overons"    class="inactive" ><a href="#" onclick="overOns()">Over ons</a>
-</li>
-<li  id="namenlijst" class="inactive" ><a href="#" onclick="namenLijst()">Alle familieleden</a>
-</li>
-<li id="persoonsgegevens" class="inactive" ><a href="#" onclick="persGeg()">Persoonsgegevens</a>
-</li>
-<li  class="inactive"><a href="#">Menu 3</a>
-</li>
-</ul>
-</div>
-</div>
+	<div class="style3"></div>
+	<div class="style_2">
+		<span class="style3"><a href="http://localhost:8080/Familie"
+			title="Familie"><strong>Familie</strong></a></span>
+	</div>
+	<div id="wrap">
+		<div id="topbar">
+			<h1 id="sitename">
+				<a href="http://localhost:8080/Familie">Familie</a>
+			</h1>
+			<div id="menus">
+				<ul id="topmenu">
+					<li id="home" class="active"><a href="#" onclick="home()">Home</a>
+					</li>
+					<li id="overons" class="inactive"><a href="#"
+						onclick="overOns()">Over ons</a></li>
+					<li id="namenlijst" class="inactive"><a href="#"
+						onclick="namenLijst()">Alle familieleden</a></li>
+					<li id="persoonsgegevens" class="inactive"><a href="#"
+						onclick="persGeg()">Persoonsgegevens</a></li>
+					<li class="inactive"><a href="#">Menu 3</a></li>
+				</ul>
+			</div>
+		</div>
 
-<div id="header">
-</div>
-<!-- <div id="content"> -->
-<div id="mainpage">
-</div>
-<div id="sidebar">
-<div id="sidebarcontents"> 
-	<ul id="menu">
-		<li>
- 		<h2>Our Services</h2>
-	</li>
-		<li>
-			<ul><li><a href="#">Link a Website</a></li>
-				<li><a href="#">Website Link B</a></li>
-				<li><a href="#">Website Link C</a></li>
-				<li><a href="#">Small Businesses Website</a></li>
-				<li><a href="#">Flyer Website</a></li>
-			</ul>
-		</li>
-	</ul>
-</div>
-<!-- </div> -->
+		<div id="header"></div>
+		<!-- <div id="content"> -->
+		<div id="mainpage"></div>
+		<div id="sidebar">
+			<div id="sidebarcontents">
+				<ul id="menu">
+					<li>
+						<h2>Our Services</h2>
+					</li>
+					<li>
+						<ul>
+							<li><a href="#">Link a Website</a></li>
+							<li><a href="#">Website Link B</a></li>
+							<li><a href="#">Website Link C</a></li>
+							<li><a href="#">Small Businesses Website</a></li>
+							<li><a href="#">Flyer Website</a></li>
+						</ul>
+					</li>
+				</ul>
+			</div>
+			<!-- </div> -->
 
-  <div id="sidebarbottom"></div>
-</div>
-<div class="clear"></div>
-<div>
-
-</div>
-<div id="footer">
-<p>Copyright &copy; 2016 Familie| <a href="#">Sitemap</a></p>
-</div>
-</div>
+			<div id="sidebarbottom"></div>
+		</div>
+		<div class="clear"></div>
+		<div></div>
+		<div id="footer">
+			<p>
+				Copyright &copy; 2016 Familie| <a href="#">Sitemap</a>
+			</p>
+		</div>
+	</div>
 </body>
 </html>
