--- a/WebContent/persGeg.html
+++ b/WebContent/persGeg.html
@@ -61,7 +61,7 @@
 		<tr><td>Herhaal wachtwoord</td><td><input type="password" id="password2" 		maxlength="20"	size="15" onblur="checkPersGeg(id)"></td>
 			<td style="color:red;"								id="foutPassword2"></td>
 		</tr>
-		<tr><td></td><td> <button onClick="setPersgeg()" type="button">Opslaan</button></td></tr>
+		<tr><td></td><td> <button id ="opslaan" onClick="setPersgeg()" type="button">Opslaan</button></td></tr>
 	</table>
 </form> 
 </div>
