--- a/WebContent/relaties.html
+++ b/WebContent/relaties.html
@@ -1,17 +1,23 @@
 <div id="up">
 </div>
 <div id="left">
+	<label>Kies persoon</label><br>
 	<select>
-		<option>Kies persoon</option>
+		<optgroup id="linkerlijst">
+		</optgroup>
 	</select>
 </div>
 <div id="center">
+	<label>Kies relatietype</label><br>
 	<select>
-		<option>Kies relatietype</option>
+		<optgroup id="middellijst">
+		</optgroup>
 	</select>
 </div>
 <div id="right">
+	<label>Kies persoon</label><br>
 	<select>
-		<option>Kies persoon</option>
+		<optgroup id="rechterlijst">
+		</optgroup>
 	</select>
 </div>
