--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,28 +1,24 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Design by Kees en Ronald</title>
-<script src="JSFuncties.js" type="text/javascript"></script>
-<link href="style.css" rel="stylesheet" type="text/css" />
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<title>Design by Kees en Ronald</title>
+	<script src="JSFuncties.js" type="text/javascript"></script>
+	<link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body onload="home()">
 	<div id="wrap">
 		<div id="topbar">
 			<h1 id="sitename">
-				<a href="http://localhost:8080/Familie">Familie</a>
+				<a href="http://localhost:8080/Familie">De nazaten van Herman Roest en Saar Bos</a>
 			</h1>
 			<div id="menus">
 				<ul id="topmenu">
-					<li id="home" 				class="active"><a 	href="#" 
-						onclick="home()">Home</a></li>
-					<li id="overons" 			class="inactive"><a href="#"
-						onclick="overOns()">Over ons</a></li>
-					<li id="namenlijst" 		class="inactive"><a href="#"
-						onclick="namenLijst()">Alle familieleden</a></li>
-					<li id="persoonsgegevens" 	class="inactive"><a href="#"
-						onclick="persGeg()">Persoonsgegevens</a></li>
+					<li id="home" 				class="active"><a 	href="#" onclick="home()">Home</a></li>
+					<li id="overons" 			class="inactive"><a href="#" onclick="overOns()">Over ons</a></li>
+					<li id="namenlijst" 		class="inactive"><a href="#" onclick="namenLijst()">Alle familieleden</a></li>
+					<li id="persoonsgegevens" 	class="inactive"><a href="#" onclick="persGeg()">Persoonsgegevens</a></li>
 					<li 						class="inactive"><a href="#">Menu 3</a></li>
 				</ul>
 			</div>
