--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -13,49 +13,44 @@
 			<h1 id="sitename">
 				<a href="http://localhost:8080/Familie">De nazaten van Herman Roest en Saar Bos</a>
 			</h1>
-			<div id="menus">
-				<ul id="topmenu">
-					<li id="home"             class="active"  ><a href="#" onclick="home()"      >Home             </a></li>
-					<li id="overons"          class="inactive"><a href="#" onclick="overOns()"   >Over ons         </a></li>
-					<li id="namenlijst"       class="inactive"><a href="#" onclick="namenLijst()">Alle familieleden</a></li>
-					<li id="persoonsgegevens" class="inactive"><a href="#" onclick="persGeg()"   >Persoonsgegevens </a></li>
-					<li id="relaties"         class="inactive"><a href="#" onclick="relaties()"  >Relaties         </a></li>
-				</ul>
-			</div>
 		</div>
-
+		<div id="menus">
+			<ul id="topmenu">
+				<li id="home"             class="active"  ><a href="#" onclick="home()"      >Home             </a></li>
+				<li id="overons"          class="inactive"><a href="#" onclick="overOns()"   >Over ons         </a></li>
+				<li id="namenlijst"       class="inactive"><a href="#" onclick="namenLijst()">Alle familieleden</a></li>
+				<li id="persoonsgegevens" class="inactive"><a href="#" onclick="persGeg()"   >Persoonsgegevens </a></li>
+				<li id="relaties"         class="inactive"><a href="#" onclick="relaties()"  >Relaties         </a></li>
+			</ul>
+		</div>
 		<!-- div id="header"></div> -->
 		<div id="content">
-		<div id="mainpage"></div>
-		<div id="sidebar">
-			<div id="sidebarcontents">
-				<ul id="menu">
-					<li>
-						<h2>Our Services</h2>
-					</li>
-					<li>
-						<ul>
-							<li><a href="#">Link a Website</a></li>
-							<li><a href="#">Website Link B</a></li>
-							<li><a href="#">Website Link C</a></li>
-							<li><a href="#">Small Businesses Website</a></li>
-							<li><a href="#">Flyer Website</a></li>
-						</ul>
-					</li>
-				</ul>
+			<div id="mainpage"></div>
+			<div id="sidebar">
+				<div id="sidebarcontents">
+					<ul id="menu">
+						<li>
+							<h2>Our Services</h2>
+						</li>
+						<li>
+							<ul>
+								<li><a href="#">Link a Website</a></li>
+								<li><a href="#">Website Link B</a></li>
+								<li><a href="#">Website Link C</a></li>
+								<li><a href="#">Small Businesses Website</a></li>
+								<li><a href="#">Flyer Website</a></li>
+							</ul>
+						</li>
+					</ul>
+				</div>
+				<div id="sidebarbottom"></div>
 			</div>
-			<!-- </div> -->
-
-			<div id="sidebarbottom"></div>
+			<div class="clear"></div>
+			<div></div>
 		</div>
-		<div class="clear"></div>
-		<div></div>
-		<div id="footer">
-			<p>
-				Copyright &copy; 2016 Familie| <a href="#">Sitemap</a>
-			</p>
-		</div>
-	</div>
+			<div id="footer">
+				<p>Copyright &copy; 2016 Familie|<a href="#">Sitemap</a></p>
+			</div>
 	</div>
 </body>
 </html>
