--- a/WebContent/relaties.html
+++ b/WebContent/relaties.html
@@ -20,4 +20,5 @@
 		<optgroup id="rechterlijst">
 		</optgroup>
 	</select>
+	<button id ="opslaan" onClick="setPersgeg()" type="button">Opslaan</button>
 </div>
