--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -10,13 +10,10 @@
 <body onload="home()">
 	<div id="wrap">
 		<div id="topbar">
-			<img src="images/Echtpaar.jpg" alt="Echtpaar" height="200" id="top-links"></img>
-			<img src="images/Zwieten.jpg" alt="Huis te Zwieten" height="200" id="top-rechts"></img>
+			<img src="images/EchtpaarZwart.jpg" alt="Echtpaar" 			height="200" 	id="top-links"></img>
+			<img src="images/ZwietenZwart.jpg"  alt="Huis te Zwieten" 	height="200" 	id="top-rechts"></img>
 			<div id="top-midden">
-				<img src="images/Header.png" alt="Familiewapen" height="200"></img>
-				<h1 id="sitename">
-					<a href="http://localhost:8080/Familie">De nazaten van Herman Roest en Saar Bos</a>
-				</h1>
+				<img src="images/Header.png" 	alt="Familiewapen" 		height="196"></img>
 			</div>
 			<div id="menus">
 				<ul id="topmenu">
