--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>Design by Kees en Ronald</title>
+	<meta 	http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<title>	Design by Kees en Ronald</title>
 	<script src="JSFuncties.js" type="text/javascript"></script>
-	<link href="style.css" rel="stylesheet" type="text/css" />
+	<link 	href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body onload="home()">
@@ -13,7 +13,8 @@
 			<img src="images/EchtpaarZwart.jpg" alt="Echtpaar" 			height="200" 	id="top-links"></img>
 			<img src="images/ZwietenZwart.jpg"  alt="Huis te Zwieten" 	height="200" 	id="top-rechts"></img>
 			<div id="top-midden">
-				<img src="images/Header.png" 	alt="Familiewapen" 		height="196"></img>
+				<img src="images/Header.png" 	alt="Familiewapen" 		height="151"></img>
+				<h1>Familie De Groot</h1>
 			</div>
 			<div id="menus">
 				<ul id="topmenu">
@@ -22,9 +23,12 @@
 					<li id="namenlijst"       class="inactive"><a href="#" onclick="namenLijst()">Alle familieleden</a></li>
 					<li id="persoonsgegevens" class="inactive"><a href="#" onclick="persGeg()"   >Persoonsgegevens </a></li>
 					<li id="relaties"         class="inactive"><a href="#" onclick="relaties()"  >Relaties         </a></li>
+					<li id="contact"          class="inactive floatright"><a href="#" onclick="contact()">Contact  </a></li>
+					<li id="login"         	  class="inactive floatright"><a href="#" onclick="login()"  >Login	   </a></li>
 				</ul>
 			</div>
 		</div>
+		<p><br></br><br></br></p>
 		<div id="content">
 			<div id="mainpage"></div>
 			<div id="sidebar">
@@ -46,8 +50,9 @@
 				</div>
 				<div id="sidebarbottom"></div>
 			</div>
-			<div class="clear"></div>
-			<div></div>
+			<div id="footer">
+				<p>Copyright &copy; 2016 FamilieDeGroot| <a href="#">Sitemap</a></p>
+			</div>
 		</div>
 	</div>
 </body>
