--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -35,15 +35,15 @@
 				<div id="sidebarcontents">
 					<ul id="menu">
 						<li>
-							<h2>Our Services</h2>
+							<h2>Meer...</h2>
 						</li>
 						<li>
 							<ul>
-								<li><a href="#">Link a Website</a></li>
-								<li><a href="#">Website Link B</a></li>
-								<li><a href="#">Website Link C</a></li>
-								<li><a href="#">Small Businesses Website</a></li>
-								<li><a href="#">Flyer Website</a></li>
+								<li><a href="#">Foto's uit de oude doos</a></li>
+								<li><a href="#">Programma a.s. familieweekend</a></li>
+								<li><a href="#">Alle familieweekends</a></li>
+								<li><a href="#">Verhalen</a></li>
+								<li><a href="#">Familiegeschiedenis</a></li>
 							</ul>
 						</li>
 					</ul>
@@ -51,6 +51,7 @@
 				<div id="sidebarbottom"></div>
 			</div>
 			<div id="footer">
+				<br></br>
 				<p>Copyright &copy; 2016 FamilieDeGroot| <a href="#">Sitemap</a></p>
 			</div>
 		</div>
