--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -13,7 +13,7 @@
 			<img src="images/EchtpaarZwart.jpg" alt="Echtpaar" 			height="200" 	id="top-links"></img>
 			<img src="images/ZwietenZwart.jpg"  alt="Huis te Zwieten" 	height="200" 	id="top-rechts"></img>
 			<div id="top-midden">
-				<img src="images/Header.png" 	alt="Familiewapen" 		height="151"></img>
+				<img src="images/Header.png" 	alt="Familiewapen" 		height="141"	id="top-midden"></img>
 				<h1>Familie De Groot</h1>
 			</div>
 			<div id="menus">
