Functies omgezet naar jQuery

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -4,6 +4,7 @@
 	<meta 	http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>	Design by Kees en Ronald</title>
 	<script src="JSFuncties.js" type="text/javascript"></script>
+	<script src="jquery-3.1.1.js" type="text/javascript"></script>
 	<link 	href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -18,13 +19,13 @@
 			</div>
 			<div id="menus">
 				<ul id="topmenu">
-					<li id="home"             class="active"  ><a href="#" onclick="home()"      >Home             </a></li>
-					<li id="overons"          class="inactive"><a href="#" onclick="overOns()"   >Over ons         </a></li>
-					<li id="namenlijst"       class="inactive"><a href="#" onclick="namenLijst()">Alle familieleden</a></li>
-					<li id="persoonsgegevens" class="inactive"><a href="#" onclick="persGeg()"   >Persoonsgegevens </a></li>
-					<li id="relaties"         class="inactive"><a href="#" onclick="relaties()"  >Relaties         </a></li>
-					<li id="contact"          class="inactive floatright"><a href="#" onclick="contact()">Contact  </a></li>
-					<li id="login"         	  class="inactive floatright"><a href="#" onclick="login()"  >Login	   </a></li>
+					<li id="home"             class="active"    ><a href="#" onclick="home()"      >Home             </a></li>
+					<li id="overons"                            ><a href="#" onclick="overOns()"   >Over ons         </a></li>
+					<li id="namenlijst"                         ><a href="#" onclick="namenLijst()">Alle familieleden</a></li>
+					<li id="persoonsgegevens"                   ><a href="#" onclick="persGeg()"   >Persoonsgegevens </a></li>
+					<li id="relaties"                           ><a href="#" onclick="relaties()"  >Relaties         </a></li>
+					<li id="contact"          class="floatright"><a href="#" onclick="contact()"   >Contact          </a></li>
+					<li id="login"         	  class="floatright"><a href="#" onclick="login()"     >Login	         </a></li>
 				</ul>
 			</div>
 		</div>
