--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -24,6 +24,7 @@
 					<li id="namenlijst"                         ><a href="#" onclick="namenLijst()">Alle familieleden</a></li>
 					<li id="persoonsgegevens"                   ><a href="#" onclick="persGeg()"   >Persoonsgegevens </a></li>
 					<li id="relaties"                           ><a href="#" onclick="relaties()"  >Relaties         </a></li>
+					<li id="stamboom"                           ><a href="#" onclick="stamboom()"  >Stamboom         </a></li>
 					<li id="contact"          class="floatright"><a href="#" onclick="contact()"   >Contact          </a></li>
 					<li id="login"         	  class="floatright"><a href="#" onclick="login()"     >Login	         </a></li>
 				</ul>
