--- a/WebContent/stamboom.html
+++ b/WebContent/stamboom.html
@@ -6,34 +6,34 @@
 </head>
 <body>
 <div style="width: 99%;border: solid 2px;text-align: center;margin: 0px 0px 0px 0px;padding: 0px 0px 0px 0px">
-	<div><h3>Pater familias<br>Mater familias</h3><br>
+	<div><h1>Pater familias<br>Mater familias</h1><br>
 	</div>
 </div>
 <div style="width: 99%;border: solid 1px;text-align: center;margin: 0px 0px 0px 0px;padding: 0px 0px 0px 0px;border-top: 0px">
-	<div style="display: inline-block;width: 33%;border: solid 1px;border-top: 0px">Kind 1
+	<div style="display: inline-block;width: 33%;border: solid 1px;border-top: 0px"><h2>Kind 1</h2>
 	</div>
-	<div style="display: inline-block;width: 33%;border: solid 1px;border-top: 0px">Kind 2
+	<div style="display: inline-block;width: 33%;border: solid 1px;border-top: 0px"><h2>Kind 2</h2>
 	</div>
-	<div style="display: inline-block;width: 33%;border: solid 1px;border-top: 0px">Kind 3
+	<div style="display: inline-block;width: 33%;border: solid 1px;border-top: 0px"><h2>Kind 3</h2>
 	</div>
 </div>
 <div style="width: 99%;border: solid 1px;text-align: center;margin: 0px 0px 0px 0px;padding: 0px 0px 0px 0px;border-top: 0px">
 	<div style="display: inline-block;width: 33%;border: solid 1px;text-align: center;margin: 0px 0px 0px 0px;padding: 0px 0px 0px 0px;border-top: 0px">
-		<div style="display: inline-block;width: 32%;border: solid 1px;border-top: 0px">Kleinkind 1
+		<div style="display: inline-block;width: 32%;border: solid 1px;border-top: 0px"><h3>Kleinkind 1</h3>
 		</div>
-		<div style="display: inline-block;width: 32%;border: solid 1px;border-top: 0px">Kleinkind 2
+		<div style="display: inline-block;width: 32%;border: solid 1px;border-top: 0px"><h3>Kleinkind 2</h3>
 		</div>
-		<div style="display: inline-block;width: 32%;border: solid 1px;border-top: 0px">Kleinkind 3
-		</div>
-	</div>
-	<div style="display: inline-block;width: 33%;border: solid 1px;text-align: center;margin: 0px 0px 0px 0px;padding: 0px 0px 0px 0px;border-top: 0px">
-		<div style="display: inline-block;width: 49%;border: solid 1px;border-top: 0px">Kleinkind 4
-		</div>
-		<div style="display: inline-block;width: 49%;border: solid 1px;border-top: 0px">Kleinkind 5
+		<div style="display: inline-block;width: 32%;border: solid 1px;border-top: 0px"><h3>Kleinkind 3</h3>
 		</div>
 	</div>
 	<div style="display: inline-block;width: 33%;border: solid 1px;text-align: center;margin: 0px 0px 0px 0px;padding: 0px 0px 0px 0px;border-top: 0px">
-		<div style="display: inline-block;width: 100%;border: solid 1px;border-top: 0px">Kleinkind 6
+		<div style="display: inline-block;width: 49%;border: solid 1px;border-top: 0px"><h3>Kleinkind 4</h3>
+		</div>
+		<div style="display: inline-block;width: 49%;border: solid 1px;border-top: 0px"><h3>Kleinkind 5</h3>
+		</div>
+	</div>
+	<div style="display: inline-block;width: 33%;border: solid 1px;text-align: center;margin: 0px 0px 0px 0px;padding: 0px 0px 0px 0px;border-top: 0px">
+		<div style="display: inline-block;width: 100%;border: solid 1px;border-top: 0px"><h3>Kleinkind 6</h3>
 		</div>
 	</div>
 </div>
