--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -5,6 +5,7 @@
 	<title>	Design by Kees en Ronald</title>
 	<script src="JSFuncties.js" type="text/javascript"></script>
 	<script src="jquery-3.1.1.js" type="text/javascript"></script>
+	<script src="jQueryFunctions.js"></script>
 	<link 	href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -19,14 +20,14 @@
 			</div>
 			<div id="menus">
 				<ul id="topmenu">
-					<li id="home"             class="active"    ><a href="#" onclick="home()"      >Home             </a></li>
+					<li id="home"            class="active"     ><a href="#" onclick="home()"      >Home             </a></li>
 					<li id="overons"                            ><a href="#" onclick="overOns()"   >Over ons         </a></li>
 					<li id="namenlijst"                         ><a href="#" onclick="namenLijst()">Alle familieleden</a></li>
 					<li id="persoonsgegevens"                   ><a href="#" onclick="persGeg()"   >Persoonsgegevens </a></li>
 					<li id="relaties"                           ><a href="#" onclick="relaties()"  >Relaties         </a></li>
 					<li id="stamboom"                           ><a href="#" onclick="stamboom()"  >Stamboom         </a></li>
-					<li id="contact"          class="floatright"><a href="#" onclick="contact()"   >Contact          </a></li>
-					<li id="login"         	  class="floatright"><a href="#" onclick="login()"     >Login	         </a></li>
+					<li id="contact"         class="floatright1"><a href="#" onclick="contact()"   >Contact          </a></li>
+					<li id="login"        	 class="floatright2"><a href="#" onclick="login()"     >Login	         </a></li>
 				</ul>
 			</div>
 		</div>
@@ -52,10 +53,10 @@
 				</div>
 				<div id="sidebarbottom"></div>
 			</div>
-			<div id="footer">
-				<br></br>
-				<p>Copyright &copy; 2016 FamilieDeGroot| <a href="#">Sitemap</a></p>
-			</div>
+		</div>
+		<div id="footer">
+			<br></br>
+			<p>Copyright &copy; 2016 FamilieDeGroot| <a href="#">Sitemap</a></p>
 		</div>
 	</div>
 </body>
