--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -2,20 +2,21 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta 	http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>	Design by Kees en Ronald</title>
+	<title>	Familie De Groot</title>
 	<script src="JSFuncties.js" type="text/javascript"></script>
 	<script src="jquery-3.1.1.js" type="text/javascript"></script>
 	<script src="jQueryFunctions.js"></script>
 	<link 	href="style.css" rel="stylesheet" type="text/css" />
+	<link 	rel="icon" href="images/Favicon.png"></link>
 </head>
 
 <body onload="home()">
 	<div id="wrap">
 		<div id="topbar">
-			<img src="images/EchtpaarZwart.jpg" alt="Echtpaar" 			height="200" 	id="top-links"></img>
-			<img src="images/ZwietenZwart.jpg"  alt="Huis te Zwieten" 	height="200" 	id="top-rechts"></img>
+			<img src="images/Echtpaar.jpg" alt="Echtpaar" 			height="200" 	id="top-links"></img>
+			<img src="images/Zwieten.jpg"  alt="Huis te Zwieten" 	height="200" 	id="top-rechts"></img>
 			<div id="top-midden">
-				<img src="images/Header.png" 	alt="Familiewapen" 		height="141"	id="top-midden"></img>
+				<img src="images/Wapen.png" alt="Familiewapen" 		height="141"	id="top-midden"></img>
 				<h1>Familie De Groot</h1>
 			</div>
 			<div id="menus">
